--- a/server/package.json
+++ b/server/package.json
@@ -10,8 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "mongoose": "^5.12.4",
+    "multer": "^1.4.5-lts.1",
     "socket.io": "^4.0.1"
   },
   "devDependencies": {
