--- a/.github/workflows/publish-ghcr.yaml
+++ b/.github/workflows/publish-ghcr.yaml
@@ -11,7 +11,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: Build and push the image
         run: |
-          VERSION=$(node -p "require('./package.json').version")
+          VERSION=$(node -p "require('./server/package.json').version")
           docker login --username approjecthub --password ${{secrets.gdoc_key}} ghcr.io
           docker build ./server -t ghcr.io/approjecthub/gdoc_server:${VERSION}
           docker push ghcr.io/approjecthub/gdoc_server:${VERSION}
