--- a/client/package.json
+++ b/client/package.json
@@ -4,16 +4,17 @@
   "private": true,
   "dependencies": {
     "quill": "^1.3.7",
+    "quill-delta": "^5.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
     "socket.io-client": "^4.6.2",
-    "typescript": "^5.3.3",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
+    "typescript": "^4.5.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
