--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "npm run build && tsc-watch --project . --onSuccess \"node ./build/server.js\"",
+    "build": "tsc -p ."
   },
   "keywords": [],
   "author": "",
@@ -18,6 +19,11 @@
     "socket.io": "^4.0.1"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "@types/express": "^4.17.21",
+    "@types/multer": "^1.4.11",
+    "@types/node": "^20.10.6",
+    "ts-node": "^10.9.2",
+    "tsc-watch": "^6.0.4",
+    "typescript": "^5.3.3"
   }
 }
